Anonymous | Login | 2019-02-24 00:30 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0028999 | Open CASCADE | [OCCT] OCCT:Configuration | public | 2017-08-15 16:42 | 2017-09-29 16:29 | ||||
Reporter | nds | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.2.0 | ||||||||
Target Version | [OCCT] 7.2.0 | Fixed in Version | [OCCT] 7.2.0 | ||||||
Summary | 0028999: Configuration - Modify Qt Browser build option | ||||||||
Description | Options to build QT browser should be modified: - USE_QT_TOOLS should be renamed into BUILD_Inspector. - USE_QT4 should be removed. It is used to define whether Qt5 or Qt4 third party is used. It should be calculated by CMake automatically. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|
(0069413) git (administrator) 2017-08-15 16:46 |
Branch CR28999 has been created by nds. SHA-1: dfdfa61fb5a7cfde38696f4d1678d15712689007 No new revisions were added by this update. |
(0069414) nds (developer) 2017-08-15 16:49 |
Dear Igor could you please change options on Jenkins and start job for this branch. Thank you in advance, Natalia |
(0069415) git (administrator) 2017-08-15 16:53 |
Branch CR28999 has been updated by nds. SHA-1: d39ac9ac4220ec0ae34bd5a67540a6412861d8e0 Detailed log of new commits: Author: nds Date: Tue Aug 15 16:52:59 2017 +0300 0028999: Modify Qt Browser build option |
(0069435) bugmaster (administrator) 2017-08-16 10:12 |
Cmake procedure is crashed on Fedora 22 and 24 http://jenkins-test-08.nnov.opencascade.com/view/CR28999_master/view/OCCT%20compile/job/CR28999_master-OCCT-F22-64-opt-compile/5/console [^] http://jenkins-test-08.nnov.opencascade.com/view/CR28999_master/view/OCCT%20compile/job/CR28999_master-OCCT-F24-64-opt-compile/5/console [^] |
(0069442) git (administrator) 2017-08-16 12:09 |
Branch CR28999 has been updated by nds. SHA-1: 7f58995e24867125fc1c1531e84b9c62a4d528f4 Detailed log of new commits: Author: nds Date: Wed Aug 16 12:08:32 2017 +0300 # cmake correction for Fedora 22 and 24 |
(0069443) nds (developer) 2017-08-16 12:09 |
Dear Igor please restart the job. Thank you in advance, Natalia |
(0069451) bugmaster (administrator) 2017-08-16 13:37 |
New problems: http://jenkins-test-08.nnov.opencascade.com/view/CR28999_master/view/OCCT%20compile/job/CR28999_master-OCCT-F22-64-opt-compile/6/parsed_console/ [^] http://jenkins-test-08.nnov.opencascade.com/view/CR28999_master/view/OCCT%20compile/job/CR28999_master-OCCT-F24-64-opt-compile/6/ [^] |
(0069467) git (administrator) 2017-08-16 16:06 |
Branch CR28999 has been updated by nds. SHA-1: b837e5e100b1422526885ae483548b6c973c6124 Detailed log of new commits: Author: nds Date: Wed Aug 16 16:05:53 2017 +0300 # cmake correction for Fedora 22 and 24 |
(0069468) nds (developer) 2017-08-16 16:08 |
Dear Igor please restart the job once again. Thank you in advance, Natalia |
(0069500) git (administrator) 2017-08-17 09:41 |
Branch CR28999 has been updated by nds. SHA-1: e1c89bea386b71eea056f673d5e05df801a8bb49 Detailed log of new commits: Author: nds Date: Thu Aug 17 09:40:51 2017 +0300 # cmake correction for Win32 compilation with installed Qt5(win64). |
(0069501) nds (developer) 2017-08-17 09:41 |
Dear Igor please restart the job once again. Thank you in advance, Natalia |
(0069503) git (administrator) 2017-08-17 11:00 |
Branch CR28999 has been updated by nds. SHA-1: 9d16d37dd6824bd263a3017f332caa0ffa85f789 Detailed log of new commits: Author: nds Date: Thu Aug 17 10:59:49 2017 +0300 # cmake correction for Win32 compilation with installed Qt5(win64). |
(0069687) git (administrator) 2017-08-20 20:22 |
Branch CR28999 has been updated forcibly by inv. SHA-1: 560150a885236cb687bd1455240c72cb618e3b84 |
(0069703) bugmaster (administrator) 2017-08-21 12:27 |
Combination - OCCT branch : CR28999 : SHA-1: 560150a885236cb687bd1455240c72cb618e3b84 Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. http://jenkins-test-08.nnov.opencascade.com/view/CR28999_master/ [^] http://jenkins-test-10.nnov.opencascade.com/view/CR28999-master-INV/ [^] Number of compiler warnings: OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 5 (5 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences CPU differences: Windows: OCCT Total CPU difference: 17330.010689098726 / 17295.75286949859 [+0.20%] Producst Total CPU difference: 7688.758886599963 / 7720.302288799964 [-0.41%] Linux: OCCT Total CPU difference: 19451.89000000023 / 19456.560000000376 [-0.02%] Products Total CPU difference: 7703.40000000009 / 7725.120000000072 [-0.28%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0069734) git (administrator) 2017-08-22 10:51 |
Branch CR28999 has been updated by nds. SHA-1: c9d044dd71e709f7e5526a6d6d0b80a073223e25 Detailed log of new commits: Author: nds Date: Tue Aug 22 10:51:27 2017 +0300 # BUILD_MODULE_QtBrowser is renamed to BUILD_Inspector # tools.* is renamed into inspector.* |
(0069739) git (administrator) 2017-08-22 12:25 |
Branch CR28999 has been updated by nds. SHA-1: 1ee2e3d0b45255c3871ef45509af6a213cd22fb3 Detailed log of new commits: Author: nds Date: Tue Aug 22 12:25:35 2017 +0300 # giving parameters into TInspectorEXE to choice available plugins in the sample. |
(0069740) git (administrator) 2017-08-22 12:31 |
Branch CR28999_1 has been created by nds. SHA-1: be96848257968066fc5ce62f0a9eef7af36bef88 Detailed log of new commits: Author: nds Date: Tue Aug 15 16:52:59 2017 +0300 0028999: Modify Qt Browser build option 'BUILD_Inspector' CMake option switches ON/OFF Inspector in compilation procedure (add additional dependency to Qt third party product) 'inspector.bat' starts sample to demonstrate possibilities of this tool. |
(0069741) nds (developer) 2017-08-22 12:37 |
Dear Igor could you please change options on Jenkins: - BUILD_Inspector instead of BUILD_MODULE_QtBrowser/USE_QT_TOOLS and start job for 'CR28999_1'. Thank you in advance, Natalia |
(0069742) bugmaster (administrator) 2017-08-22 13:11 |
Fix has been started on jenkins-test-08 |
(0069773) bugmaster (administrator) 2017-08-23 12:06 |
Combination - OCCT branch : CR28999_1 : SHA-1: be96848257968066fc5ce62f0a9eef7af36bef88 Products branch : master has been compiled on all platforms under maintenance http://jenkins-test-08.nnov.opencascade.com/view/CR28999_1_master/view/OCCT%20compile/ [^] |
(0069774) git (administrator) 2017-08-23 12:14 |
Branch CR28999_1 has been updated by nds. SHA-1: c2d99d3184b2f1b059b022fd5b55c04a8b261c6e Detailed log of new commits: Author: nds Date: Wed Aug 23 12:14:10 2017 +0300 0028999: Modify Qt Browser build option # replacing TOOLS to INSPECTOR key for 'pload' command in DRAW cases due to this change in DrawPlugin. |
(0069779) bugmaster (administrator) 2017-08-23 12:53 |
Combination - OCCT branch : CR28999_1 : SHA-1: be96848257968066fc5ce62f0a9eef7af36bef88 Products branch : master has been compiled on standard platforms under maintenance. http://jenkins-test-10.nnov.opencascade.com/view/CR28999_1-master-INV/ [^] Number of compiler warnings: OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 5 (5 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0069903) git (administrator) 2017-08-25 16:13 |
Branch CR28999 has been deleted by kgv. SHA-1: 1ee2e3d0b45255c3871ef45509af6a213cd22fb3 |
(0069904) git (administrator) 2017-08-25 16:13 |
Branch CR28999_1 has been deleted by kgv. SHA-1: c2d99d3184b2f1b059b022fd5b55c04a8b261c6e |
![]() |
|||
occt: master 4f4b8935
Timestamp: 2017-08-15 13:52:59 Author: nds Committer: bugmaster [ Details ] [ Diff ] |
0028999: Modify Qt Browser build option 'BUILD_Inspector' CMake option switches ON/OFF Inspector in compilation procedure (add additional dependency to Qt third party product) 'inspector.bat' starts sample to demonstrate possibilities of this tool. Replacing TOOLS to INSPECTOR key for 'pload' command in DRAW cases due to this change in DrawPlugin. |
||
mod - adm/cmake/occt_macros.cmake | [ Diff ] [ File ] | ||
mod - adm/cmake/occt_toolkit_tool.cmake | [ Diff ] [ File ] | ||
mod - adm/cmake/vardescr.cmake | [ Diff ] [ File ] | ||
rm - adm/templates/dfbrowser.bat | [ Diff ] [ File ] | ||
add - adm/templates/inspector.bat | [ Diff ] [ File ] | ||
add - adm/templates/TInspectorEXE.vcxproj.user.in | [ Diff ] [ File ] | ||
mod - CMakeLists.txt | [ Diff ] [ File ] | ||
mod - samples/tools/TInspectorEXE/TInspectorEXE.cxx | [ Diff ] [ File ] | ||
mod - samples/tools/TStandalone/adm/cmake/occt_toolkit_standalone.cmake | [ Diff ] [ File ] | ||
mod - samples/tools/TStandalone/CMakeLists.txt | [ Diff ] [ File ] | ||
mod - src/DrawResources/DrawPlugin | [ Diff ] [ File ] | ||
mod - tests/tools/dfbrowser/A1 | [ Diff ] [ File ] | ||
mod - tests/tools/dfbrowser/A2 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2017-08-15 16:42 | nds | New Issue | |
2017-08-15 16:42 | nds | Assigned To | => nds |
2017-08-15 16:43 | nds | Relationship added | related to 0027398 |
2017-08-15 16:46 | git | Note Added: 0069413 | |
2017-08-15 16:47 | nds | Status | new => resolved |
2017-08-15 16:47 | nds | Target Version | 7.4.0* => 7.2.0 |
2017-08-15 16:49 | nds | Note Added: 0069414 | |
2017-08-15 16:49 | nds | Assigned To | nds => bugmaster |
2017-08-15 16:49 | nds | Status | resolved => reviewed |
2017-08-15 16:53 | git | Note Added: 0069415 | |
2017-08-16 10:12 | bugmaster | Note Added: 0069435 | |
2017-08-16 10:12 | bugmaster | Assigned To | bugmaster => nds |
2017-08-16 10:12 | bugmaster | Status | reviewed => assigned |
2017-08-16 12:09 | git | Note Added: 0069442 | |
2017-08-16 12:09 | nds | Note Added: 0069443 | |
2017-08-16 12:10 | nds | Status | assigned => resolved |
2017-08-16 12:10 | nds | Assigned To | nds => bugmaster |
2017-08-16 12:10 | nds | Status | resolved => reviewed |
2017-08-16 13:37 | bugmaster | Note Added: 0069451 | |
2017-08-16 13:37 | bugmaster | Assigned To | bugmaster => nds |
2017-08-16 13:37 | bugmaster | Status | reviewed => assigned |
2017-08-16 14:21 | kgv | Relationship replaced | child of 0027398 |
2017-08-16 14:21 | kgv | Product Version | => 7.2.0 |
2017-08-16 14:21 | kgv | Summary | Modify Qt Browser build option => Configuration - Modify Qt Browser build option |
2017-08-16 16:06 | git | Note Added: 0069467 | |
2017-08-16 16:08 | nds | Note Added: 0069468 | |
2017-08-16 16:08 | nds | Status | assigned => resolved |
2017-08-16 16:08 | nds | Assigned To | nds => bugmaster |
2017-08-16 16:08 | nds | Status | resolved => reviewed |
2017-08-17 09:41 | git | Note Added: 0069500 | |
2017-08-17 09:41 | nds | Note Added: 0069501 | |
2017-08-17 11:00 | git | Note Added: 0069503 | |
2017-08-18 13:42 | bugmaster | Note Added: 0069574 | |
2017-08-18 13:42 | bugmaster | Status | reviewed => assigned |
2017-08-18 14:29 | bugmaster | Note Deleted: 0069574 | |
2017-08-18 14:29 | bugmaster | Status | assigned => feedback |
2017-08-20 20:22 | git | Note Added: 0069687 | |
2017-08-21 12:27 | bugmaster | Note Added: 0069703 | |
2017-08-21 12:27 | bugmaster | Status | feedback => tested |
2017-08-21 12:27 | bugmaster | Test case number | => Not required |
2017-08-21 13:21 | bugmaster | Assigned To | bugmaster => nds |
2017-08-21 13:21 | bugmaster | Status | tested => assigned |
2017-08-22 10:51 | git | Note Added: 0069734 | |
2017-08-22 10:54 | nds | Description Updated | View Revisions |
2017-08-22 12:25 | git | Note Added: 0069739 | |
2017-08-22 12:31 | git | Note Added: 0069740 | |
2017-08-22 12:34 | nds | Status | assigned => resolved |
2017-08-22 12:37 | nds | Note Added: 0069741 | |
2017-08-22 12:37 | nds | Assigned To | nds => bugmaster |
2017-08-22 12:37 | nds | Status | resolved => reviewed |
2017-08-22 13:11 | bugmaster | Note Added: 0069742 | |
2017-08-23 12:06 | bugmaster | Note Added: 0069773 | |
2017-08-23 12:14 | git | Note Added: 0069774 | |
2017-08-23 12:53 | bugmaster | Note Added: 0069779 | |
2017-08-23 12:53 | bugmaster | Status | reviewed => tested |
2017-08-25 15:02 | bugmaster | Changeset attached | => occt master 4f4b8935 |
2017-08-25 15:02 | bugmaster | Status | tested => verified |
2017-08-25 15:02 | bugmaster | Resolution | open => fixed |
2017-08-25 16:13 | git | Note Added: 0069903 | |
2017-08-25 16:13 | git | Note Added: 0069904 | |
2017-09-29 16:17 | aiv | Fixed in Version | => 7.2.0 |
2017-09-29 16:29 | aiv | Status | verified => closed |
Copyright © 2000 - 2019 MantisBT Team |