adm/templates/inspector.sh
@@ -6,4 +6,4 @@ aScriptPath=${BASH_SOURCE%/*}; if [ -d "${aScriptPath}" ]; then cd "$aScriptPath
 source "${aScriptPath}/env.sh" "$1"
 
 cd ${aCurrentPath}
-TInspectorEXE --dfbrowser
+TInspectorEXE
